--- a/templates/user/log_in.html
+++ b/templates/user/log_in.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
-
 <head>
       <title>HTML Login Form</title>
-      <link rel="stylesheet" href="../../static/css/log_in.css">
+      <link rel="stylesheet" href="{% static 'css/log_in.css'%}">
 </head>
 
 <body>
