--- a/static/css/register.css
+++ b/static/css/register.css
@@ -42,7 +42,18 @@ label {
     border-radius: 5px;
     }
 
-button[type="submit"] {
+button[type='submit'] {
+    padding: 15px;
+    border-radius: 10px;
+    border: none;
+    background-color: #4caf50;
+    color: white;
+    cursor: pointer;
+    width: 100%;
+    font-size: 16px;
+    }
+
+.btn-primary {
     padding: 15px;
     border-radius: 10px;
     border: none;
