--- a/templates/post/create_post.html
+++ b/templates/post/create_post.html
@@ -8,8 +8,44 @@
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        {{ image_form.as_p }}
-        <button type="submit">Submit</button>
+
+        <table class="table">
+            {{ formset.management_form }}
+            {% for form in formset.forms %}
+            <tr class="formset_row">
+                {% for field in form.visible_fields %}
+                <td>
+                    {% if forloop.first %}
+                    {% for hidden in form.hidden_fields %}
+                    {{ hidden }}
+                    {% endfor %}
+                    {% endif %}
+                    {{ field.errors.as_ul }}
+                    {{ field }}
+                </td>
+                {% endfor %}
+            </tr>
+            {% endfor %}
+        </table>
+
+        <button type="submit" class="btn btn-success d-block mx-auto">Создать</button>
     </form>
+
+    <!-- Include jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <!-- Include jQuery Formset -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.formset/1.2.2/jquery.formset.js"></script>
+
+    <!-- Initialize jQuery Formset -->
+    <script type="text/javascript">
+        $('.formset_row').formset({
+            addText: '<button class="btn btn-info mt-3">Добавить новое изображение</button>',
+            deleteText: '<button class="btn btn-danger">Удалить</button>',
+            prefix: 'postimage_set',
+        });
+    </script>
 </body>
+
+
 </html>
