--- a/templates/teacher/detail.html
+++ b/templates/teacher/detail.html
@@ -73,19 +73,33 @@
 {% endblock nav %}
 
 {% block main_content %}
-<div class="teacher-content">
-    <div class="container">
-        <img src="{{ teacher.image.url }}" alt="{{ teacher.first_name }} {{ teacher.last_name }}">
-        <h4>{{ teacher.first_name }} {{ teacher.last_name }}</h4>
-
-        <p>Предмет: {{ teacher.subjects }}</p>
-        <p>Опыт: {{ teacher.experience }} лет</p>
-        <p>{{ teacher.description }}</p>
-        <p>Возраст: {{ teacher.age }}</p>
-
-        {% if user.is_superuser %}
-            <a href="{% url 'teacher_update' pk=teacher.id %}">Update</a>
-            <a href="{% url 'teacher_delete' pk=teacher.id %}">Delete</a>
+<div class="profile-container">
+    {% if teacher.image %}
+    <div class="profile-image-container">
+        <img src="{{ teacher.image.url }}" width="100" class="profile-image">
+    </div>
+    {% endif %}
+    <div class="profile-details-container">
+        <h5 class="profile-name">{{ teacher.first_name }} {{ teacher.last_name }}</h5>
+        <span class="profile-position">{{ teacher.subjects }}</span>
+        {% if teacher.age %}
+            <div class="profile-age">
+                <a>Age: {{ teacher.age }}</a>
+            </div>
+        {% endif %}
+        <div class="profile-bio">
+            <p>{{ teacher.description }}</p>
+        </div>
+        <div class="profile-contact">
+            {% if teacher.experiance %}
+                <a>{{ teacher.experiance }}</a>
+            {% endif %}
+        </div>
+        {% if user.is_superuser or user.role == content_maker %}
+        <div class="profile-actions">
+            <a href="{% url 'teacher_update' pk=teacher.id %}" class="btn-update">Update</a>
+            <a href="{% url 'teacher_delete' pk=teacher.id %}" class="btn-delete">Delete</a>
+        </div>
         {% endif %}
     </div>
 </div>
