--- a/templates/teacher/teacher_form.html
+++ b/templates/teacher/teacher_form.html
@@ -1,19 +1,78 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form create teacher</title>
+    <link rel="stylesheet" href="{% static 'css/register.css' %}">
+
 </head>
 <body>
 
+    <div class="main" style="align-content: center; margin-top: 100px">
 
-    <h2>{% if form.instance.pk %} Редактировать {% else %} Добавить {% endif %}</h2>
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Сохранить</button>
-    </form>
-    <a href="{% url 'list_teacher' %}">Назад</a>
+
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <div class="form-group">
+
+                <h2>{% if form.instance.pk %} Редактировать {% else %} Создать учителя {% endif %}</h2>
+                <label for="first_name">Имя:</label>
+                {{ form.first_name }}
+                {% if form.first_name.errors %}
+                    <div class="text-danger">{{ form.first_name.errors }}</div>
+                {% endif %}
+            </div>
+            <div class="form-group">
+                <label for="last_name">Фамилия:</label>
+                {{ form.last_name }}
+                {% if form.last_name.errors %}
+                    <div class="text-danger">{{ form.last_name.errors }}</div>
+                {% endif %}
+            </div>
+            <div class="form-group">
+                <label for="date_of_birth">Дата рождение:</label>
+                {{ form.date_of_birth }}
+                {% if form.date_of_birth.errors %}
+                    <div class="text-danger">{{ form.date_of_birth.errors }}</div>
+                {% endif %}
+            </div>
+            <div class="form-group">
+                <label for="description">Описание:</label>
+                {{ form.description }}
+                {% if form.description.errors %}
+                    <div class="text-danger">{{ form.description.errors }}</div>
+                {% endif %}
+            </div>
+            <div class="form-group">
+                <label for="subjects">Предмет:</label>
+                {{ form.subjects }}
+                {% if form.subjects.errors %}
+                    <div class="text-danger">{{ form.subjects.errors }}</div>
+                {% endif %}
+            </div>
+            <div class="form-group">
+                <label for="image">Изображение:</label>
+                {{ form.image }}
+                {% if form.image.errors %}
+                    <div class="text-danger">{{ form.image.errors }}</div>
+                {% endif %}
+            </div>
+            <div class="form-group">
+                <label for="experiance">Опыт:</label>
+                {{ form.experiance }}
+                {% if form.experiance.errors %}
+                    <div class="text-danger">{{ form.experiance.errors }}</div>
+                {% endif %}
+            </div>
+            <p>   </p>
+            <button type="submit" class="btn btn-primary">Создать</button>
+            <p>  </p>
+            <button class="btn btn-primary"><a href="{% url 'list_teacher' %}" class="btn btn-secondary" style="text-decoration: none; color: white">Назад</a></button>
+
+        </form>
+    </div>
 </body>
 </html>
+
